--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ deploy:
     tags: false
     name: Snapshots $(date --utc +'%F-%T')
     on:
-      branch: travis-snapshots
+      branch: master
       go: '1.8'
   #tagged releases
   - provider: releases
