--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
 - ./support/scripts/run_tests
 before_deploy:
 - go run ./support/scripts/build_release_artifacts/main.go
-- ./support/scripts/push_snapshots_tag.sg
+- ./support/scripts/push_snapshots_tag.sh
 matrix:
   fast_finish: true
   allow_failures:
